added the main and added some comments

--- a/assignment1/assignment1.csproj
+++ b/assignment1/assignment1.csproj
@@ -59,7 +59,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Complex\Complex.cs" />
-    <Compile Include="Operations\Operations.cs" />
     <Compile Include="Primitives\Primitives.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,10 +86,7 @@
     <Compile Include="Complex\TAPair.cs" />
     <Compile Include="Operations\TAPlus.cs" />
     <Compile Include="Operations\TAXor.cs" />
-    <Compile Include="Unary Operations\UnaryOperations.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <Compile Include="Generic Classes\Operations.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
@@ -104,7 +100,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
